# raylib_template

./: .gitignore  CMakeLists.txt
app/src/: main.cpp
scripts/: build.sh  buildMakefile.bat  buildSolution.bat
